<resources>
    <string name="app_name">PetCare</string>


    <!--
             STRINGS DEL HOME NAVIGATION
        -->

    <!-- Strings used for action bar menu -->
    <string name="action_search">Buscar</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_privacity">Privacidad</string>

    <!-- Strings used for fragments for navigation_drawer_configuracion abrir y cerrar el drawer-->
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <!-- Strings used for fragments for navigation -->
    <string name="title_search">Búsqueda</string>
    <string name="title_difusion">Difusión</string>
    <string name="title_config">Perfil</string>

    <!-- Strings used for tabs difusion -->
    <string name="tab_text_1">Mascotas Perdidas</string>
    <string name="tab_text_2">Mascotas</string>
    <string name="tab_text_3">Mascotas en Adopción</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_petfriendly">Pet Friendly</string>
    <string name="text_add_perdida">Extraviada</string>
    <string name="text_add_encontrada">Encontrada</string>
    <string name="text_add_adopción">Adopción</string>
    <string name="text_fab_add">Gererar reporte</string>
    <string name="action_back">Back</string>
    <string name="hint_nombre_mascota">Nombre de la mascota</string>
    <string name="hint_fecha_extravio">Fecha de extravío</string>
    <string name="label_zona_extravio">Zona de extravío:</string>
    <string name="label_alcaldia">Alcaldía:</string>
    <string name="hint_colonia">Colonia</string>
    <string name="hint_calle">Calle</string>
    <string name="hint_descripcion">Descripción</string>
    <string name="label_tipo">Tipo de mascota:</string>
    <string name="title_btn_generar">Generar</string>
    <string name="hint_edad_mascota">Edad de la mascota</string>
    <string name="hint_hora_extravio">Hora de extravío</string>
    <string name="hint_fecha_encontrada">Fecha en que fue encontrada</string>
    <string name="hint_hora_encontrada">Hora en que fue encontrada</string>
    <string name="label_zona_encontrada">Zona en que fue encontrada</string>
    <string name="hint_raza">Raza</string>
    <string name="label_zona_adopcion">Zona</string>
    <string name="label_vacunas">Vacunas:</string>
    <string name="label_esterilizacion">Esterilización:</string>
    <string name="label_nombre_DRMP">Nombre:</string>
    <string name="label_title_DRMP">¿Lo has visto?</string>
    <string name="label_tipoDRMP">Tipo de mascota:</string>
    <string name="label_edadDRMP">Edad:</string>
    <string name="label_fecha_extravio_DRMP">Fecha de extravío:</string>
    <string name="label_hora_extravio_DRMP">Hora de extravío:</string>
    <string name="label_zona_extravio_DRMP">Zona de Extravío</string>
    <string name="label_alcaldia_DRMP">Alcaldía:</string>
    <string name="label_colonia_DRMP">Colonia:</string>
    <string name="label_calle_DRMP">Calle:</string>
    <string name="label_descripcion_DRMP">Descripción:</string>
    <string name="label_email_user">E-mail:</string>
    <string name="label_telefono_user">Teléfono:</string>
    <string name="label_domicilio_user">Domicilio:</string>
    <string name="label_fecha_encontrada_DRME">Fecha en que fue encontrada:</string>
    <string name="label_hora_encontrada_DRME">Hora en que fue encontrada:</string>
    <string name="label_zona_encontrada_DRME">Zona donde fue encontrada</string>
    <string name="label_razaDRMA">Raza:</string>
    <string name="label_vacunas_DRMA">Vacunas:</string>
    <string name="label_zona_DRMA">Zona</string>
    <string name="fab_busqueda">Buscar un cuidador</string>
    <string name="dialog_ubicacion">Ubicación</string>
    <string name="label_dialog_tipo_cuidado">Tipo de servicio:</string>
    <string name="label_dialog_distancia">Distancia máxima:</string>
    <string name="text_dialog_distancia">0</string>
    <string name="label_filtrar_por">Filtrar por:</string>
    <string name="label_zona">Zona</string>
    <string name="label_fecha">Fecha</string>
    <string name="hint_fecha1">Fecha 1</string>
    <string name="label_fecha_del">Del:</string>
    <string name="label_fecha_al">Al:</string>
    <string name="hint_fecha2">Fecha 2</string>

    <string-array name="alcaldias">
        <item>Álvaro Obregón</item>
        <item>Azcapotzalco</item>
        <item>Benito Juárez</item>
        <item>Coyoacán</item>
        <item>Cuajimalpa</item>
        <item>Cuauhtémoc</item>
        <item>Gustavo A. Madero</item>
        <item>Iztacalco</item>
        <item>Iztapalapa</item>
        <item>Magdalena Contreras</item>
        <item>Miguel Hidalgo</item>
        <item>Milpa Alta</item>
        <item>Tláhuac</item>
        <item>Tlalpan</item>
        <item>Venustiano Carranza</item>
        <item>Xochimilco</item>
    </string-array>

    <!-- STRINGS DEL PETFRIENDLY -->
    <string name="button_ok">Aceptar</string>
    <string name="label_nombre_lugar">Nombre</string>
    <string name="label_descripcion_lugar">Descripción</string>
    <string name="label_direccion_lugar">Dirección</string>
    <string name="fab_busqueda_direccion">Buscar dirección</string>
    <string name="label_comentario">Comentario</string>
    <string name="label_tomar_foto">Agregar foto</string>
    <string name="label_cambiar_foto_lugar">Cambiar foto</string>
    <string name="label_agregar_lugar">Guardar lugar PetFriendly</string>
    <string name="label_agregar_categoria">Guardar categoría PetFriendly</string>
    <string name="label_agregar_resena">Agregar reseña</string>
    <string name="title_mapa_cuidador">Mapa</string>
    <string name="estado_inactivo">Inactivo</string>
    <string name="estado_activo">Activo</string>
    <string name="label_dialog_ubicacion">Ubicación:</string>
    <string name="text_dialog_km">Km</string>
    <string name="label_buscar_por">Buscar por:</string>
    <string name="label_datos_contacto">Datos de contacto:</string>
    <string name="label_servicios">Servicios que brinda:</string>
    <string name="label_precio">Precio: $</string>
    <string name="label_descripcion_servicio">Descripción del servicio:</string>
    <string name="label_distancia">Distancia:</string>
    <string name="ver_mas">Ver más</string>
    <string name="edad">Edad</string>
    <string name="line">1111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111</string>
    <string name="descripcion">Descripción</string>
    <string name="label_title_DRME">¿Lo reconoces?</string>
    <string name="label_title_DRMA">¿Te interesa adoptar?</string>
    <string name="image_transition">imageTransition</string>
    <string name="title_btn_evaluar">Calificar cuidador</string>
    <string name="label_pregunta1">¿Cómo valoraría la atención brindada por parte del cuidador hacia usted?</string>
    <string name="label_pregunta2">¿Cómo valoraría el trato por parte del cuidador hacia su mascota?</string>
    <string name="label_pregunta3">Considera que las habilidades del cuidador con las mascotas son:</string>
    <string name="label_pregunta4">¿Cómo considera la relación entre el servicio ofrecido y el precio?</string>
    <string name="label_pregunta5">¿Qué tan satisfecho se encuentra con el servicio brindado por el cuidador?</string>
    <string name="label_pregunta6">¿Desea agregar algún comentario?</string>
    <string name="label_criterio1">Trato al dueño:</string>
    <string name="label_criterio2">Trato a la mascota:</string>
    <string name="label_criterio3">Habilidades del cuidador:</string>
    <string name="label_criterio4">Precio:</string>
    <string name="label_criterio5">General:</string>
    <string name="label_comentarios">Comentarios</string>
    <string name="hint_comentarios">Comentarios(Opcional)</string>
    <string name="label_calificacion">Calificación:</string>
    <string name="stars_transition">starsTransition</string>
    <string name="title_btn_eliminar_repr">Eliminar reporte</string>
    <string name="label_mis_reportes">MIS REPORTES</string>
    <string name="subiendo_rep">Generando reporte</string>
    <string name="label_autor">Subido por:</string>
    <string name="calificando_cuidador">Calificando</string>
    <string name="label_sin_servicios">Sin servicios todavía</string>
    <string name="title_activity_buscar_direccion">Map</string>

    <!--
             STRINGS DEL HOME NAVIGATION
        -->


</resources>
