<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.actionbar.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:iconTint="#ffffff"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_privacity"
        android:iconTint="#ffffff"
        android:orderInCategory="100"
        android:title="@string/action_privacity"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search20"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:iconTint="#ffffff"
        app:showAsAction="ifRoom|withText"

        />
</menu>