<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.difusion.adopcion.GenerarReporteAdopcionActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/id_input_imageRMA"
                android:layout_width="250dp"
                android:layout_height="250dp"
                app:srcCompat="@android:drawable/ic_menu_gallery"
                android:layout_gravity="center_horizontal"
                tools:ignore="MissingConstraints,OnClick"
                android:onClick="onClick"/>

            <TextView
                android:id="@+id/label_tipoRMA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/label_tipo"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_tipoRMA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:theme="@style/Spinner" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/id_input_razaRMA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:hint="@string/hint_raza"
                android:textColor="@color/colorPrimary" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/id_input_edadRMA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:hint="@string/hint_edad_mascota"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/label_vacunasRMA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/label_vacunas"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_vacunasRMA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:theme="@style/Spinner" />

            <TextView
                android:id="@+id/label_esterilizacionRMA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/label_esterilizacion"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_esterilizacionRMA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:theme="@style/Spinner" />


            <TextView
                android:id="@+id/label_zona_adopcionRMA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/label_zona_adopcion"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/label_alcaldiaRMA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/label_alcaldia"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_alcaldiaRMA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:theme="@style/Spinner" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/id_input_coloniaRMA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:hint="@string/hint_colonia"
                android:textColor="@color/colorPrimary"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/id_input_calleRMA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:hint="@string/hint_calle"
                android:textColor="@color/colorPrimary" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/id_input_descripcionRMA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:hint="@string/hint_descripcion"
                android:textColor="@color/colorPrimary" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/id_btn_generarRMA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/title_btn_generar"
                android:textStyle="bold"
                android:background="@drawable/btn_curve"
                android:textColor="#ffffff"
                android:onClick="onClick"
                tools:ignore="OnClick" />


        </androidx.appcompat.widget.LinearLayoutCompat>



    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>