<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homenavigation.ui.difusion.encontradas.GenerarReporteEncontradaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/id_input_imageRME"
                android:layout_width="250dp"
                android:layout_height="250dp"
                app:srcCompat="@android:drawable/ic_menu_gallery"
                android:layout_gravity="center_horizontal"
                tools:ignore="MissingConstraints,OnClick"
                android:onClick="onClick"/>



            <TextView
                android:id="@+id/label_tipoRME"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/label_tipo"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_tipoRME"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:theme="@style/Spinner" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/id_input_fechaRME"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:hint="@string/hint_fecha_encontrada"
                android:textColor="@color/colorPrimary"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/id_input_horaRME"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:hint="@string/hint_hora_encontrada"
                android:textColor="@color/colorPrimary"/>


            <TextView
                android:id="@+id/label_zona_extravioRME"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/label_zona_encontrada"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/label_alcaldiaRME"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/label_alcaldia"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_alcaldiaRME"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:theme="@style/Spinner" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/id_input_coloniaRME"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:hint="@string/hint_colonia"
                android:textColor="@color/colorPrimary"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/id_input_calleRME"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:hint="@string/hint_calle"
                android:textColor="@color/colorPrimary" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/id_input_descripcionRME"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:hint="@string/hint_descripcion"
                android:textColor="@color/colorPrimary" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/id_btn_generarRME"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/title_btn_generar"
                android:textStyle="bold"
                android:background="@drawable/btn_curve"
                android:textColor="#ffffff"
                android:onClick="onClick"
                tools:ignore="OnClick" />


        </androidx.appcompat.widget.LinearLayoutCompat>



    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>