<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">



    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_location"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:hint="@string/dialog_ubicacion"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/label_dialog_tipo_mascota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/label_tipo"
        android:textSize="20sp"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/dialog_tipo_mascota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:theme="@style/Spinner"
        tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/label_dialog_tipo_cuidado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/label_dialog_tipo_cuidado"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/dialog_tipo_cuidado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:theme="@style/Spinner"
            tools:ignore="MissingConstraints" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/label_dialog_distancia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/label_dialog_distancia"
                android:textSize="20sp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/text_dialog_distancia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/text_dialog_distancia"
                android:textSize="20sp"
                tools:ignore="MissingConstraints" />



        </androidx.appcompat.widget.LinearLayoutCompat>

        <SeekBar
            android:id="@+id/dialog_seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="30dp"
            />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>